# CrewAI-Poem-Writer-With-UV

./: .env  README.md  main.py  poem.txt  pyproject.toml
